Bug 407604 - Initial new tab focus is on location bar instead of files view
Summary: Initial new tab focus is on location bar instead of files view
Status: RESOLVED FIXED
Alias: None
Product: dolphin
Classification: Applications
Component: general (other bugs)
Version First Reported In: 19.04.1
Platform: Neon Linux
: NOR normal
Target Milestone: ---
Assignee: Dolphin Bug Assignee
URL:
Keywords: junior-jobs, usability
Depends on:
Blocks:
 
Reported: 2019-05-16 15:49 UTC by equeim
Modified: 2019-07-28 14:20 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 19.11.80
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description equeim 2019-05-16 15:49:06 UTC
SUMMARY
When opening a new tab in the background and switching to that tab the focus is set on location bar instead of files view. If you switch back to original tab and then to new tab again (without doing anything else) then focus will be set on the files view.

STEPS TO REPRODUCE
1. Open a new tab in the background
2. Switch to the new tab

OBSERVED RESULT
Focus is set on the location bar.

EXPECTED RESULT
Focus should be set on the files view.

SOFTWARE/OS VERSIONS
Linux/KDE Plasma: KDE neon 18.04
(available in About System)
KDE Plasma Version: 5.15.5
KDE Frameworks Version: 5.58.0
Qt Version: 5.12.0

ADDITIONAL INFORMATION
Comment 1 Nate Graham 2019-05-21 19:16:57 UTC
Already fixed in Dolphin 19.04.2!
Comment 2 equeim 2019-06-14 13:39:10 UTC
I've just checked Dolpgin 19.04.2 on Ubuntu (with Kubuntu backports PPA) and it's not fixed.
Comment 3 Nate Graham 2019-06-14 13:45:22 UTC
Urg, you're right. :/ Broken on master too.
Comment 4 Elvis Angelaccio 2019-07-28 14:20:02 UTC
Git commit 9d4c75d2f7a97633f45db635976d6f7cb3c26d37 by Elvis Angelaccio, on behalf of Andrey Yashkin.
Committed on 28/07/2019 at 14:18.
Pushed by elvisangelaccio into branch 'master'.

Fix an issue with a new tab focus

Summary:
When opening a new tab in the background and switching to that tab the focus is set on the location bar instead of the files view. If you switch back to the original tab and then to the new tab again focus will be set on the files view. The problem is caused by creation of //DolphinTabPage// in an active state which leads to skipping by //return// in //DolphinView::setActive(bool active)// without setting the focus on the view. This patch fixes this defect.
FIXED-IN: 19.11.80

Test Plan:
1. Open a new tab in the background
2. Switch to the new tab
3. Check current focus widget by the up/down arrows on the keyboard with and without changes.

Reviewers: #dolphin, ngraham, elvisangelaccio

Reviewed By: ngraham

Subscribers: anthonyfieroni, ngraham, elvisangelaccio, kfm-devel

Tags: #dolphin

Differential Revision: https://phabricator.kde.org/D22386

M  +1    -0    src/dolphintabwidget.cpp

https://commits.kde.org/dolphin/9d4c75d2f7a97633f45db635976d6f7cb3c26d37